version 0.4.6:

- completely new mpeg audio layer 1/2/3 decoder rewritten from
  scratch.
- recoded dct and motion vector search with gcc (no longer depends on
  nasm).
- fix quantization bug in AC3 encoder.

version 0.4.5:

- some header fixes (Zdenek Kabelac <kabi@informatics.muni.cz>).
- many MMX optimizations (Nick Kurshev <nickols_k@mail.ru>).
- added configure system (actually a small shell script).
- added mpeg audio layer 1/2/3 decoding using LGPL'ed mpglib by
  Michael Hipp (temporary solution - waiting for integer only
  decoder).
- fixed VIDIOCSYNC interrupt.
- added Intel H263 decoding support ('I263' avi fourCC)
- added Real Video 1.0 decoding (needs further testing).
- simplified image formats again. Added PGM format (=grey
  pgm). Renamed old PGM to PGMYUV.
- fixed msmpeg4 slice issues (tell me if you still find problems).
- fixed opendivx bugs with newer versions (added VOL header decoding).
- added support for mplayer interface.
- added macroblock skip optimization.
- added MJPEG decoder.
- added mmx/mmxext idct from libmpeg2.
- added pgmyuvpipe, ppm, and ppm_pipe formats (original patch by Celer
  <celer@shell.scrypt.net>).
- added pixel format convertion layer (e.g. for MJPEG or PPM).
- added deinterlacing option.
- mpeg1/2 fixes.
- mpeg4 vol header fixes (Jonathan Marsden <snmjbm@pacbell.net>).
- ARM optimizations (Lionel Ulmer <lionel.ulmer@free.fr>).
- Windows porting of file converter.
- added MJPEG raw format (input/ouput).
- added JPEG image format support (input/output).

version 0.4.4:

- fixed some std header definitions (Bjorn Lindgren
  <bjorn.e.lindgren@telia.com>).
- added mpeg demux (mpeg 1 and 2 compatible).
- added ASF demux.
- added prototype RM demux.
- added AC3 decoding (done with libac3 by Aaron Holtzman).
- added decoding codec parameter guessing (.e.g. for mpeg, because the
  header does not include them).
- fixed header generation in mpeg1, AVI and ASF mux : wmplayer can now
  play them (only tested video).